# HouseItGoingSaaS

./: .env.example  .env1.example  .gitattributes  .gitignore  TESTING.md  docker-compose.yml  middleware.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vitest.config.ts
app/: layout.tsx
generate-report-lambda/: .env.example  Dockerfile  README.md  build-and-publish.ps1  build-and-publish.sh  pyproject.toml  test_lambda.py
generate-report-lambda/report_code_old/: changeLayout.py  createReport.py  mainReporting.py  plots.py  requirements.txt
generate-report-lambda/report_code_old/!Report/: Bjælkeeftervisning_betonplade.docx  Fundering.docx  Murværkseftervisning.docx  Søjleeftervisning_stål.docx  Tilbud-Template.docx  vindlast.docx  ~$ælkeeftervisning_træ.docx
generate-report-lambda/src/: Steel_fire.py  create_report.py  discretize.py  main.py  plots.py  report_template_steel.docx  restore_from_database.py  supports.py
generate-report-lambda/src/report_templates/: beam_steel.docx  beam_steel_UNP.docx  beam_wood.docx  column_steel_RHS.docx
lib/: types.ts  (+3 more)
run-simulation-lambda/: .dockerignore  .env.example  Dockerfile  LOCAL_TESTING.md  README.md  bootstrap  build-and-publish.ps1  build-and-publish.sh  pyproject.toml  requirements.txt  test_lambda.py
run-simulation-lambda/src/: main.py
run-simulation-lambda/src/Moon2Mars/: EC3.py  EC5.py  EC6.py  Frame_FEM.py  MurProp.py  Project.py  S copy.py  S.py  Steel_beams.py  Steel_parameters.py  Wall.py  Wood_parameters.py  dev_plots.py
run-simulation-lambda/src/lib/: capture_print.py  serialization.py
(+192 files in other folders)
